--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node":"v20.13.1"
+  },
   "name": "wanderhome",
   "version": "1.0.0",
   "main": "index.js",
@@ -12,6 +15,7 @@
   "dependencies": {
     "cloudinary": "^1.37.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
